# Ramanujan

./: .env  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  a2a.py  base_agent.py  orchestrator.py  planner.py  react_agent.py  reflexion_agent.py  rewoo_agent.py  tree_search_agent.py
api/: __init__.py  cache.py  main.py  middleware.py  routes.py  schemas.py
configs/: logging_config.py  settings.py
core/: exceptions.py  llm_client.py  message_types.py  token_counter.py
evaluation/: __init__.py  benchmarks.py  evaluator.py  metrics.py
tests/: test_agents.py  test_api.py  test_tools.py  test_workflows.py
tools/: __init__.py  base_tool.py  calculator.py  mcp_client.py  summarizer.py  tool_executor.py  tool_registry.py  web_scraper.py  web_search.py
workflows/: __init__.py  parallelization.py  prompt_chaining.py  reflection.py  routing.py
