[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ramanujan"
version = "1.0.0"
description = "A Perplexity-like Ask-the-Web Agent with ReACT, tool calling, and multi-step reasoning"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "serpapi>=0.1.5",
    "tavily-python>=0.3.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]